<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.wjlmyfragment.AboutBMActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:background="@mipmap/back"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_18"
            android:layout_gravity="center"
            android:text="@string/kefu"/>
    </android.support.v7.widget.Toolbar>
    <ImageView
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_gravity="center"
        android:background="@drawable/icon_me_kaquan_banmi1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/dp_18"
        android:text="@string/app_name"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_6"
        app:cardElevation="@dimen/dp_10"
        android:layout_margin="@dimen/dp_20"
        android:padding="@dimen/dp_6">
        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:textSize="@dimen/dp_18"
                android:text="@string/phone"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_7"
                android:layout_marginTop="@dimen/dp_5"
                android:drawableLeft="@mipmap/icon_me_kefu_tel"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgary"
                android:layout_marginTop="@dimen/dp_5"
                />
            <TextView
                android:id="@+id/tv_emial"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:textSize="@dimen/dp_18"
                android:text="@string/emial"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_7"
                android:layout_marginTop="@dimen/dp_5"
                android:drawableLeft="@mipmap/icon_me_kefu_emial"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgary"
                android:layout_marginTop="@dimen/dp_5"
                />
            <TextView
                android:id="@+id/tv_wechat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:textSize="@dimen/dp_18"
                android:gravity="center_vertical"
                android:text="@string/wechat"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_7"
                android:drawableLeft="@mipmap/icon_me_kefu_wechat"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dp_18"
        android:layout_margin="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:hint="@string/app"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_20"
        android:hint="@string/app_contern"/>
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dp_16"
         android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:hint="@string/app_conterntwo"/>


</LinearLayout>