<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ll"
    tools:context=".ui.wjlmyfragment.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:background="@mipmap/back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textSize="@dimen/dp_18" />
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:padding="@dimen/dp_4"
        app:cardCornerRadius="@dimen/dp_5"
        app:cardElevation="@dimen/dp_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/aboutbanmi"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:id="@+id/tv_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="@string/set_about" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@mipmap/right_arrow" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/lightgary" />

            <RelativeLayout
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:id="@+id/tv_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="@string/set_clear" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:text="@string/clear" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/lightgary" />

            <RelativeLayout
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="@string/set_tel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:text="@string/unban"
                    android:drawableRight="@mipmap/right_arrow"/>

            </RelativeLayout>

            <View
                android:id="@+id/v_tel"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/lightgary"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/wechat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_wechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="@string/set_wechat"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:text="@string/ban" />

            </RelativeLayout>

            <View
                android:id="@+id/v_wechat"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/lightgary"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/xin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_xin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="@string/set_xin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:text="@string/unban"
                    android:drawableRight="@mipmap/right_arrow"/>

            </RelativeLayout>

            <View
                android:id="@+id/v_xin"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/lightgary"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:id="@+id/tv_textsize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/set_textsize" />

                <TextView
                    android:id="@+id/tv_textsmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_10"
                    android:text="@string/small" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <Button
        android:id="@+id/exitlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exitlogin"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:visibility="gone"
        android:background="@mipmap/button_start_line"/>
</LinearLayout>