<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardviewgary">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cv"
        android:layout_margin="@dimen/dp_10"
        android:padding="@dimen/dp_5"
        app:cardCornerRadius="@dimen/dp_20"
        app:cardElevation="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/small"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:gravity="center"
                android:text="@string/small" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/lightgary" />

            <TextView
                android:id="@+id/m"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:gravity="center"
                android:text="@string/m" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/lightgary" />

            <TextView
                android:id="@+id/big"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:gravity="center"
                android:text="@string/big" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp_10"
        android:padding="@dimen/dp_5"
        app:cardCornerRadius="@dimen/dp_20"
        app:cardElevation="@dimen/dp_10">

        <TextView
            android:id="@+id/dissmis"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center"
            android:text="@string/dissmis"
            android:textColor="@color/orgain" />
    </android.support.v7.widget.CardView>
</RelativeLayout>
